Update popup styles and settings: Adjust CSS for button dimensions, background colors, and box shadows. Modify HTML for gradient and image settings, including updated values for dimmers and angles. Enhance JavaScript to reflect new color values and settings for gradients and images.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -128,7 +128,7 @@
                 >
                   <span
                     class="color-preview linear-bg-preview-1"
-                    data-color="#511111ff"
+                    data-color="#1E003BFF"
                   ></span>
                 </button>
               </span>
@@ -142,7 +142,7 @@
                 >
                   <span
                     class="color-preview linear-bg-preview-2"
-                    data-color="#212246ff"
+                    data-color="#00F5FFFF"
                   ></span>
                 </button>
               </span>
@@ -172,13 +172,13 @@
                 id="bg-gradient-dimmerL"
                 min="0"
                 max="100"
-                value="0"
+                value="67"
               />
               <div
                 class="bg-dimmer-value fw-200"
                 id="bg-gradient-dimmer-valueL"
               >
-                0
+                67
               </div>
             </div>
 
@@ -189,7 +189,7 @@
                 <input
                   type="number"
                   id="gradient-angle"
-                  value="90"
+                  value="107"
                   min="0"
                   max="360"
                   step="2"
@@ -199,7 +199,7 @@
                 <input
                   type="number"
                   id="gradient-dist-1L"
-                  value="33"
+                  value="42"
                   min="0"
                   max="100"
                   step="2"
@@ -209,7 +209,7 @@
                 <input
                   type="number"
                   id="gradient-dis-2L"
-                  value="67"
+                  value="48"
                   min="0"
                   max="100"
                   step="2"
@@ -240,7 +240,7 @@
                 >
                   <span
                     class="color-preview radial-bg-preview-1"
-                    data-color="#511111ff"
+                    data-color="#540000FF"
                   ></span>
                 </button>
               </span>
@@ -268,7 +268,7 @@
                 >
                   <span
                     class="color-preview radial-bg-preview-3"
-                    data-color="#024851ff"
+                    data-color="#540000FF"
                   ></span>
                 </button>
               </span>
@@ -284,13 +284,13 @@
                 id="bg-gradient-dimmerR"
                 min="0"
                 max="100"
-                value="0"
+                value="57"
               />
               <div
                 class="bg-dimmer-value fw-200"
                 id="bg-gradient-dimmer-valueR"
               >
-                0
+                57
               </div>
             </div>
 
@@ -298,14 +298,14 @@
             <div class="control-group mt-5 fs-08rem ml-5 gradient-dist-row">
               <label for="gradient-angle-R" class="fw-300 min-content"
                 >Angle
-                <input type="number" id="gradient-angle-R" value="90" disabled
+                <input type="number" id="gradient-angle-R" value="107" disabled
               /></label>
               <label for="gradient-dist-1R" class="fw-300 min-content"
                 >Dist 1
                 <input
                   type="number"
                   id="gradient-dist-1R"
-                  value="33"
+                  value="22"
                   min="0"
                   max="100"
                   step="2"
@@ -315,7 +315,7 @@
                 <input
                   type="number"
                   id="gradient-dis-2R"
-                  value="67"
+                  value="96"
                   min="0"
                   max="100"
                   step="2"
@@ -368,7 +368,7 @@
             type="text"
             id="bg-image-url"
             placeholder="https://example.com/image.png"
-            value="https://i.etsystatic.com/8384550/r/il/63741b/5611198200/il_794xN.5611198200_g1ir.jpg"
+            value="https://i.etsystatic.com/8384550/r/il/3148ad/5611202310/il_794xN.5611202310_kzjx.jpg"
             autocomplete="on"
             title="Enter image URL"
           />
@@ -420,7 +420,7 @@
               class="fs-08rem control-group justify-around checkbox-row-item"
             >
               <label for="bg-image-flow" class="fw-400"
-                >Flow: <input type="checkbox" id="bg-image-flow"
+                >Flow: <input type="checkbox" id="bg-image-flow" checked
               /></label>
             </div>
           </div>
