Enhance VoteSync and logging functionality: Update log method to accept additional data for debugging, implement size management for seen but not tracked posts, and improve session storage handling with eviction logic. Refactor vote handling methods for clarity and consistency. Update popup styles and settings: Adjust background colors, gradient dimmer values, and image URLs for improved user experience.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -240,7 +240,7 @@
                 >
                   <span
                     class="color-preview radial-bg-preview-1"
-                    data-color="#540000FF"
+                    data-color="#540000C2"
                   ></span>
                 </button>
               </span>
@@ -268,7 +268,7 @@
                 >
                   <span
                     class="color-preview radial-bg-preview-3"
-                    data-color="#540000FF"
+                    data-color="#5400007D"
                   ></span>
                 </button>
               </span>
@@ -290,7 +290,7 @@
                 class="bg-dimmer-value fw-200"
                 id="bg-gradient-dimmer-valueR"
               >
-                57
+                32
               </div>
             </div>
 
@@ -315,7 +315,7 @@
                 <input
                   type="number"
                   id="gradient-dis-2R"
-                  value="96"
+                  value="94"
                   min="0"
                   max="100"
                   step="2"
@@ -368,7 +368,7 @@
             type="text"
             id="bg-image-url"
             placeholder="https://example.com/image.png"
-            value="https://i.etsystatic.com/8384550/r/il/3148ad/5611202310/il_794xN.5611202310_kzjx.jpg"
+            value="https://i.etsystatic.com/8384550/r/il/63741b/5611198200/il_794xN.5611198200_g1ir.jpg"
             autocomplete="on"
             title="Enter image URL"
           />
